moved swc scss ans css assets to assets/css/swc folder

--- a/assets/css/swc/rss.scss
+++ b/assets/css/swc/rss.scss
@@ -4,13 +4,13 @@ sitemap:
 ---
 @charset "utf-8";
 
-@import "functions.scss";
+@import "swc/functions.scss";
 
 $include-html-classes: false;
-@import "01_settings_colors.scss";
-@import "02_settings_typography.scss";
-@import "03_settings_mixins_media_queries.scss";
-@import "04_settings_global.scss";
+@import "swc/01_settings_colors.scss";
+@import "swc/02_settings_typography.scss";
+@import "swc/03_settings_mixins_media_queries.scss";
+@import "swc/04_settings_global.scss";
 
 * {
 	display: block;
@@ -23,7 +23,7 @@ $include-html-classes: false;
 	font-family: $body-font-family;
 }
 
-feed {
+channel {
 	> title {
 		text-align: center;
 		color: lighten($primary-color, 25%);
@@ -31,11 +31,11 @@ feed {
 		font-size: $font-size-h1 * 1.5;
 		font-weight: bolder;
 		&::before {
-			content: 'Atom Feed for ';
+			content: 'RSS Feed for ';
 			font-weight: initial;
 		}
 		&::after {
-			content: "This Atom feed is meant to be used by RSS reader applications and websites.";
+			content: "This RSS feed is meant to be used by RSS reader applications and websites.";
 			display: block;
 			padding: 1em;
 			background-color: $alert-color;
@@ -45,18 +45,14 @@ feed {
 			letter-spacing: initial;
 		}
 	}
-	
-	> id,
-	> updated,
-	> subtitle,
-	> author,
-	> link,
-	> generator {
+
+	> description,
+	> link {
 		display: none;
 	}
 }
 
-entry {
+item {
 	padding: 1em 0;
 	border-bottom: 1px solid invert($body-bg);
 	&:last-child {
@@ -70,25 +66,24 @@ entry {
 		margin-bottom: 0.5em;
 	}
 
-	> link::after {
-		content: attr(href);
+	> link {
 		color: $primary-color;
 	}
 
-	> updated {
+	> pubDate {
 		color: $grey-5;
 		font-size: small;
 	}
 
-	> summary {
+	> description {
 		margin-top: 1em;
+		overflow: hidden;
+		white-space: nowrap;
+		text-overflow:ellipsis;
 	}
 
-	> id,
-	> author,
-	> category,
-	> published,
-	> content {
+	> guid,
+	> category {
 		display: none;
 	}
 }
