--- a/_layouts/page-fullwidth.html
+++ b/_layouts/page-fullwidth.html
@@ -32,6 +32,9 @@ format: page-fullwidth
 
 			{{ content }}
 
+			{% if page.comments == true %}
+			{% include comments %}
+			{% endif %}
 		</article>
 	</div><!-- /.medium-12.columns -->
 </div><!-- /.row -->
