--- a/assets/css/swc-workshop/swc-workshop.scss
+++ b/assets/css/swc-workshop/swc-workshop.scss
@@ -60,3 +60,15 @@ code {
   max-width: 100%;
   margin-bottom: 20px;
 }
+
+.venueDatas{
+    border: 1px solid $swc-blue-light;
+    border-radius: $global-radius;
+    background: #FEFAEE;
+    padding: 20px;
+    margin-top: 40px;
+
+    h2{
+        margin: 0 0 20px 0;
+    }
+}
