large logo now strech

--- a/_sass/swc-lesson/_02_custom_layout.scss
+++ b/_sass/swc-lesson/_02_custom_layout.scss
@@ -85,7 +85,7 @@ body.video cite { color: #fff; }
 }
 #masthead-no-image-header #logo img {
     margin-top: 10px;
-    max-width: 445px;
+    width: 100%;
 }
 
 h3.masthead {
